--- a/lessisoon6.html
+++ b/lessisoon6.html
@@ -10,25 +10,23 @@
 
 <body>
     <div>
-        <h2 style=" color: #4483b1;background-color: white;width: 100%;">5.Groups of selector</h2>
+        <h2>5.Groups of selector</h2>
         <p>A comma-separated list of selectors represents the union of all elements selected by each of the
-            individual<br>selectors in the list.(A comma is U+002C.) For example,in CSS when several selectors share the
-            same<br>declarations, they may be grouped indo a comma-separated list. White space may appear before and/or
-            afther the<br>comma</p>
+            individual selectors in the list.(A comma is U+002C.) For example,in CSS when several selectors share the
+            same declarations, they may be grouped indo a comma-separated list. White space may appear before and/or
+            afther the comma</p>
+    <div class="content">
+        <p class="abc">CSS example:</p>
+        <p class="abc">this example, we condense three rules with identical declarations into one.Thus,</p>
+        <div>
+            <p>h1 {font-family: sans-serif}</p>
+            <p>h2 {font-family: sans-serif}</p>
+            <p>h3 {font-family: sans-serif}</p>
+        </div>
+        <p class="abc">is equivalent to:</p>
+        <p class="xyz">h1, h2, h3 { font-family: sans-serif}</p>
     </div>
-    <div class="xyz">
-        <p>
-            CSS example:
-            <br>
-            In this example, we condense three rules with identical declarations into one.Thus,
-            <br><br>
-            h1 {font-family: sans-serif}<br> h2 {font-family: sans-serif}<br> h3 {font-family: sans-serif}
-            <br><br>
-            is equivalent to:
-            <br><br>
-            h1, h2, h3 { font-family: sans-serif}
-        </p>
-    </div>
+</div>
 </body>
 
 </html>
