--- a/lessison4.html
+++ b/lessison4.html
@@ -9,19 +9,16 @@
 </head>
 
 <body>
-    <div class="table">
-        <h1 >ARTICLE MANAGEMENT TABLE</h1>
-        <table align="center" width="100%">
-            <thead>
-                <tr class="table1">
+    <h1>ARTICLE MANAGEMENT TABLE</h1>
+    <table>
+        <tbody>
+                <tr class="content1">
                     <th>ID</th>
                     <th>TITLE</th>
                     <th>AUTHOR</th>
                     <th>PUBLISHED DATE</th>
                     <th>ACTIONS</th>
                 </tr>
-            </thead>
-            <tbody>
                 <tr>
                     <td>1</td>
                     <td>Introdution to CSS</td>
@@ -33,7 +30,7 @@
                         <button class="Delete">Delete</button>
                     </td>
                 </tr>
-                <tr class="table2">
+                <tr class="content2">
                     <td>2</td>
                     <td>Understanding Javacript</td>
                     <td>Jane Smith</td>
@@ -55,7 +52,7 @@
                         <button class="Delete">Delete</button>
                     </td>
                 </tr>
-                <tr class="table2">
+                <tr class="content2">
                     <td>4</td>
                     <td>Responsive Design Techniques</td>
                     <td>Sarah Lee</td>
@@ -77,9 +74,8 @@
                         <button class="Delete">Delete</button>
                     </td>
                 </tr>
-            </tbody>
-        </table>
-    </div>
+        </tbody>
+    </table>
 </body>
 
 </html>
